# algorithmic-battles

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  README.md
.github/workflows/: cpp-deep-check.yml
src/games/01_permutation_mastermind/: README.md  interactor.cpp  interactor.h  strategy.cpp  strategy.h
src/games/01_permutation_mastermind/baseline/: README.md  baseline_strategy.cpp  baseline_strategy.h
src/games/01_permutation_mastermind/submission/: test_basic.cpp
src/testing/: judge.cpp  judge.h  verdicts.h
src/testing/interfaces/: interactor.h  strategy.h
